--- a/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
+++ b/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
         </main>
     </div>
 
-    <!--<footer class="bg-primary text-white footer text-center text-lg-start">
+    <footer class="bg-primary text-white footer text-center text-lg-start mt-4">
       
         
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
@@ -72,7 +72,7 @@
         </div>
         
        
-    </footer>-->
+    </footer>
 
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
