--- a/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
+++ b/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top blurred">
             <div class="container">
-                <a class="navbar-brand" asp-page="/Index">Project Driver</a>
+                <a class="navbar-brand" asp-page="/Index">DriveYOU</a>
                 <button class="navbar-toggler"
                         type="button"
                         data-mdb-toggle="collapse"
@@ -63,12 +63,12 @@
         </main>
     </div>
 
-    <footer class="bg-primary text-white footer text-center text-lg-start mt-4">
+    <footer class="d-flex flex-wrap justify-content-center align-items-center py-3 my-4 border-top" style="position:relative; ">
       
         
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        <div class="text-center p-3">
             © 2020 Copyright:
-            <a class="text-white" href="http://spacecoder.epizy.com">Spacecoder</a>
+            <a class="text-black-50" href="http://spacecoder.epizy.com">Spacecoder</a>
         </div>
         
        
