--- a/ProjectDriver_Client/wwwroot/css/site.css
+++ b/ProjectDriver_Client/wwwroot/css/site.css
@@ -65,7 +65,7 @@ body {
     /* Margin bottom by footer height */
     font-family: "open sans", roboto, arial, sans-seif;
     margin-bottom: 60px;
-    margin-top: 56px;
+    margin-top: 50px;
 }
 .footer {
   position: absolute;
@@ -139,3 +139,17 @@ body {
     backdrop-filter: blur(20px);
     border-radius: 7px;
 }
+
+.card {
+    position: relative;
+    overflow: hidden;
+    background: transparent;
+    border-radius: 10px;
+    margin: 0 auto;
+    transition: all 0.2s ease;
+}
+
+    .card:hover {
+        transform: scale(1.05);
+        box-shadow: 0px 0px 30px #1861aca7;
+    }
