--- a/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
+++ b/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,12 @@
                         @if (User.Identity.IsAuthenticated == true)
                         {
                             <li class="nav-item active">
+                                <a class="nav-link" asp-area="" asp-page-handler="MyTrips" asp-page="/Trips">My trips</a>
+                            </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" asp-area="" asp-page-handler="Subscribed" asp-page="/Trips">Subscribed</a>
+                            </li>
+                            <li class="nav-item active">
                                 <a class="nav-link" asp-area="" asp-page="/Privacy">@User.Identity.Name</a>
                             </li>
                         }else
