--- a/ProjectDriver_Client/Pages/Account.cshtml
+++ b/ProjectDriver_Client/Pages/Account.cshtml
@@ -1,4 +1,60 @@
 ﻿@page
 @model ProjectDriver_Client.Pages.AccountModel
-@{
-}
+
+<div class="container" style="padding-top:30px; position:relative;">
+    <div class="card">
+        @if (Model.UserModel != null)
+        {
+            int age = DateTime.UtcNow.Year - Model.UserModel.Date.Year;
+            if (DateTime.UtcNow.DayOfYear < Model.UserModel.Date.DayOfYear)
+            {
+                age++;
+            }
+            <div class="d-flex mr-5 m-sm-4 m-4" style="justify-content:stretch; align-items:center; vertical-align:central;">
+                <img src="data:image/png;base64, @Model.UserModel.Photo" class="img-fluid shadow" style="border-radius: 50%; height:200px; width:200px; max-height:200px; max-width:200px;" />
+                <div class="flex-column ml-5">
+                    <h3 class="font-weight-bold">@String.Format("{0} {1}", Model.UserModel.Name, Model.UserModel.Surname)</h3>
+                    <h6 class="card-text">@String.Format("Age: {0}", age)</h6>
+                </div>
+            </div>
+            <div class="d-flex flex-row justify-content-around text-center">
+                <div class="d-flex flex-column">
+                    <h4>@String.Format("★ {0}", Model.UserModel.Rating)</h4>
+                    <p class="text-muted">rating</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <h4>@String.Format("{0}", Model.UserModel.UserReviews.Count)</h4>
+                    <p class="text-muted">reviews</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <h4>@String.Format("{0}", Model.EndedTripsCount)</h4>
+                    <p class="text-muted">trips</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row justify-content-around mt-5">
+                <div class="d-flex flex-column">
+                    <a href="tel: +@Model.UserModel.Number" class="text-center bg-primary text-white" style="border-radius:50%; height:50px; width:50px;">
+                        <i class="fas fa-phone my-3"></i>
+                    </a>
+                    <p class="card-text">Phone</p>
+                </div>
+                <div class="d-flex flex-column">
+                    <a href="tel: +@Model.UserModel.Email" class="text-center bg-primary text-white" style="border-radius:50%; height:50px; width:50px;">
+                        <i class="fas fa-envelope my-3"></i>
+                    </a>
+                    <p class="card-text">Phone</p>
+                </div>
+            </div>
+            <h3 class="font-weight-bold mx-4" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Reviews</h3>
+            @foreach (var item in Model.UserModel.UserReviews)
+            {
+                
+            }
+
+
+
+            <hr class="hr"/>
+        }
+    </div>
+</div>
