--- a/ProjectDriver_Client/Pages/Trips.cshtml
+++ b/ProjectDriver_Client/Pages/Trips.cshtml
@@ -24,29 +24,32 @@
                 {
                     seatsFree = item.ScheduledTrips.Seats;
                 }
-                <a href="google.com" class="card d-flex flex-md-row flex-sm-column m-4 text-black" style="position:relative;">
+                <a href="google.com" class="card tripscard d-flex flex-md-row flex-sm-column m-4 text-black" style="position:relative;">
                     <div class="card-body">
                         <h5 class="card-title">@String.Format("{0:MMMM dd, H:mm:ss}", item.ScheduledTrips.Date)</h5>
                         <p class="lead text-muted">@String.Format("{0} - {1}", item.ScheduledTrips.From, item.ScheduledTrips.To)</p>
                         <p class="card-text">@String.Format("Свободных мест {0} из {1}", seatsFree, item.ScheduledTrips.Seats)</p>
                     </div>
-                    <div class="justify-content-end align-self-end mb-md-4 mb-0">
-                        @if (item.ScheduledTrips.IsSmoking == true)
-                        {
-                            <img src="https://placehold.co/40" />
-                        }
-                        @if (item.ScheduledTrips.IsAnimals == true)
-                        {
-                            <img src="https://placehold.co/40" />
-                        }
-                        @if (item.ScheduledTrips.IsBagage == true)
-                        {
-                            <img src="https://placehold.co/40" />
-                        }
+                    <div class="d-flex flex-sm-row flex-md-column justify-content-between" style="min-width:128px;">
+                        <div class="align-self-end mt-md-4 ml-sm-4 ml-md-0">
+                            <h5 class="card-title">@String.Format("{0} BYN", item.ScheduledTrips.Cost)</h5>
+                        </div>
+                        <div class="align-self-end mb-md-4 mr-sm-4 mr-md-0">
+                            @if (item.ScheduledTrips.IsSmoking == true)
+                            {
+                                <img src="https://placehold.co/40" />
+                            }
+                            @if (item.ScheduledTrips.IsAnimals == true)
+                            {
+                                <img src="https://placehold.co/40" />
+                            }
+                            @if (item.ScheduledTrips.IsBagage == true)
+                            {
+                                <img src="https://placehold.co/40" />
+                            }
+                        </div>
                     </div>
-
                     <div class="vr mx-4 d-md-none d-sm-none d-lg-block" style="height: auto;"></div>
-
                     <div class="d-flex mr-5 m-sm-4 m-4" style="justify-content:stretch; align-items:center; vertical-align:central; min-width:251px;">
                         <img src="data:image/png;base64, @item.Photo" class="img-fluid" style="border-radius: 50%; height:75px; width:75px; max-height:75px; max-width:75px;" />
                         <div class="flex-column ml-2">
@@ -59,7 +62,7 @@
         }
         else
         {
-            <h1 class="display-1 text-center">No elements</h1>
+            <h1 class="display-1 text-center m-auto">No elements</h1>
         }
     }
 </div>
