--- a/ProjectDriver_Client/Pages/Account.cshtml
+++ b/ProjectDriver_Client/Pages/Account.cshtml
@@ -11,7 +11,7 @@
                 age++;
             }
             <div class="d-flex mr-5 m-sm-4 m-4" style="justify-content:stretch; align-items:center; vertical-align:central;">
-                <img src="data:image/png;base64, @Model.UserModel.Photo" class="img-fluid shadow" style="border-radius: 50%; height:200px; width:200px; max-height:200px; max-width:200px;" />
+                <img src="data:image/png;base64, @Model.UserModel.Photo" class="img-fluid" style="border-radius: 50%; height:200px; width:200px; max-height:200px; max-width:200px;" />
                 <div class="flex-column ml-5">
                     <h3 class="font-weight-bold">@String.Format("{0} {1}", Model.UserModel.Name, Model.UserModel.Surname)</h3>
                     <h6 class="card-text">@String.Format("Age: {0}", age)</h6>
@@ -40,21 +40,43 @@
                     <p class="card-text">Phone</p>
                 </div>
                 <div class="d-flex flex-column">
-                    <a href="tel: +@Model.UserModel.Email" class="text-center bg-primary text-white" style="border-radius:50%; height:50px; width:50px;">
+                    <a href="mailto: +@Model.UserModel.Email" class="text-center bg-primary text-white" style="border-radius:50%; height:50px; width:50px;">
                         <i class="fas fa-envelope my-3"></i>
                     </a>
-                    <p class="card-text">Phone</p>
+                    <p class="card-text">E-mail</p>
                 </div>
             </div>
-            <h3 class="font-weight-bold mx-4" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Reviews</h3>
-            @foreach (var item in Model.UserModel.UserReviews)
+            <h3 class="font-weight-bold mt-5 mx-5" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Reviews</h3>
+            @if (Model.UserModel.UserReviews != null && Model.UserModel.UserReviews.Count > 0)
             {
-                
+                foreach (var item in Model.UserModel.UserReviews)
+                {
+                    <a asp-page="Account" asp-route-id="@item.UserID" class="d-flex mt-4 mx-5 text-black" style="min-width:251px;">
+                        <img src="data:image/png;base64, @item.User.Photo" class="img-fluid" style="border-radius: 50%; height:75px; width:75px; max-height:75px; max-width:75px;" />
+                        <div class="flex-column ml-3">
+                            <h5 class="card-text">@String.Format("{0}, {1}", item.User.Name, item.User.Surname)</h5>
+                            <h6 class="card-text">@String.Format("★ {0}", item.Assessment)</h6>
+                            <h6 class="card-text">@item.Comment</h6>
+                        </div>
+                    </a>
+                }
+            }else
+            {
+                <p class="font-weight-bold text-muted text-center m-5">User has no reviews yet</p>
             }
-
-
-
-            <hr class="hr"/>
+            @if (Model.UserModel.CarImage != null)
+            {
+                <hr class="hr" />
+                <h3 class="font-weight-bold mt-5 mx-5" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Car</h3>
+                <h6 class="card-text text-center mx-5">@String.Format("{0} {1}", Model.UserModel.CarMark, Model.UserModel.CarModel)</h6>
+                <div class="text-center">
+                    <img src="data:image/png;base64, @Model.UserModel.CarImage" class="shadow rounded mb-4" style="width: 70%; height:auto;" />
+                </div>
+            }
+            else
+            {
+                <p class="font-weight-bold text-muted text-center m-5">User has no car</p>
+            }
         }
     </div>
 </div>
