--- a/ProjectDriver_Client/Pages/TripDetailed.cshtml
+++ b/ProjectDriver_Client/Pages/TripDetailed.cshtml
@@ -29,7 +29,7 @@
             <button type="button" class="btn btn-primary mx-5">Subscribe</button>
             <hr class="hr" />
             <h5 class="font-weight-bold mx-4" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Driver</h5>
-            <a href="google.com" class="d-flex mr-5 m-sm-4 m-4 text-black" style="justify-content:stretch; align-items:center; vertical-align:central; min-width:251px;">
+            <a asp-page="Account" asp-route-id="@Model.TripModel.ID" class="d-flex mr-5 m-sm-4 m-4 text-black" style="justify-content:stretch; align-items:center; vertical-align:central; min-width:251px;">
                 <img src="data:image/png;base64, @Model.TripModel.Photo" class="img-fluid" style="border-radius: 50%; height:95px; width:95px; max-height:95px; max-width:95px;" />
                 <div class="flex-column ml-2">
                     <h5 class="card-text">@String.Format("{0}, {1}", Model.TripModel.Name, age)</h5>
@@ -47,7 +47,7 @@
                     {
                         passangerAge++;
                     }
-                    <a href="google.com" class="d-flex mr-5 m-sm-4 m-4 text-black" style="justify-content:stretch; align-items:center; vertical-align:central; min-width:251px;">
+                    <a asp-page="Account" asp-route-id="@item.UserID" class="d-flex mr-5 m-sm-4 m-4 text-black" style="justify-content:stretch; align-items:center; vertical-align:central; min-width:251px;">
                         <img src="data:image/png;base64, @item.User.Photo" class="img-fluid" style="border-radius: 50%; height:75px; width:75px; max-height:75px; max-width:75px;" />
                         <div class="flex-column ml-2">
                             <h5 class="card-text">@String.Format("{0}, {1}", item.User.Name, passangerAge)</h5>
@@ -58,7 +58,7 @@
             }
             else
             {
-                <h4 class="h4 text-center m-auto">No passangers yet</h4>
+                <p class="font-weight-bold text-muted text-center m-5">No passangers yet</p>
             }
             <hr class="hr" />
             <h5 class="font-weight-bold mx-4" style="text-decoration:underline; text-decoration-color: #006eccff; text-decoration-thickness: 3px;">Info</h5>
@@ -79,7 +79,7 @@
                     <span class="badge badge-primary mx-2">Big bagage</span>
                 }
             </div>
-            <h6 class="text-muted mx-4">@String.Format("Car - {0} {1}", Model.TripModel.CarMark, Model.TripModel.CarModel)</h6>
+            <h6 class="text-muted mx-4 text-center">@String.Format("{0} {1}", Model.TripModel.CarMark, Model.TripModel.CarModel)</h6>
             <div class="text-center">
                 <img src="data:image/png;base64, @Model.TripModel.CarImage" class="shadow rounded mb-4" style="width: 70%; height:auto;" />
             </div>
