Added MyAccount page

--- a/ProjectDriver_Client/Pages/Trips.cshtml
+++ b/ProjectDriver_Client/Pages/Trips.cshtml
@@ -37,15 +37,15 @@
                         <div class="align-self-end mb-lg-4 mr-4 mr-lg-0">
                             @if (item.ScheduledTrips.IsSmoking == true)
                             {
-                                <img src="https://placehold.co/40" />
+                                <img src="~/smokingicon.png" />
                             }
                             @if (item.ScheduledTrips.IsAnimals == true)
                             {
-                                <img src="https://placehold.co/40" />
+                                <img src="~/dogicon.png" />
                             }
                             @if (item.ScheduledTrips.IsBagage == true)
                             {
-                                <img src="https://placehold.co/40" />
+                                <img src="~/caseicon.png" />
                             }
                         </div>
                     </div>
