--- a/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
+++ b/ProjectDriver_Client/Pages/Shared/_Layout.cshtml
@@ -48,15 +48,15 @@
                                 <a class="nav-link" asp-area="" asp-page-handler="Subscribed" asp-page="/Trips">Subscribed</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" asp-area="" asp-page="/Privacy">@User.Identity.Name</a>
+                                <a class="nav-link" asp-area="" asp-page="MyAccount">@User.Identity.Name</a>
                             </li>
                         }else
                         {
                             <li class="nav-item active">
-                                <a class="nav-link" asp-area="" asp-page="/Login">Login</a>
+                                <a class="nav-link" asp-area="" asp-page="Login">Login</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" asp-area="" asp-page="/Register">Register</a>
+                                <a class="nav-link" asp-area="" asp-page="Register">Register</a>
                             </li>
                         }
                     </ul>
