Added modal window

--- a/ProjectDriver_Client/Pages/Account.cshtml
+++ b/ProjectDriver_Client/Pages/Account.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model ProjectDriver_Client.Pages.AccountModel
+@model DriveYOU_WebClient.Pages.AccountModel
 
 <div class="container" style="padding-top:30px; position:relative;">
     <div class="card">
@@ -78,5 +78,21 @@
                 <p class="font-weight-bold text-muted text-center m-5">User has no car</p>
             }
         }
+    </div>
+</div>
+
+<div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">@Model.ErrorModel.Caption</div>
+            <div class="modal-footer">
+                <p class="lead">@Model.ErrorModel.Message</p>
+                <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+            </div>
+        </div>
     </div>
 </div>
