--- a/ProjectDriver_Client/Pages/Register.cshtml
+++ b/ProjectDriver_Client/Pages/Register.cshtml
@@ -1,11 +1,10 @@
 ﻿@page
-@model ProjectDriver_Client.Pages.RegisterModel
+@model DriveYOU_WebClient.Pages.RegisterModel
 @{
     ViewData["Title"] = "Registration";
 }
 
 <section class="overflow-auto" style="margin: !important; height:100% !important;">
-    <!-- Jumbotron -->
     <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%); height:100vh;">
         <div class="container">
             <div class="row gx-lg-5 align-items-center">
@@ -63,5 +62,20 @@
             </div>
         </div>
     </div>
-    <!-- Jumbotron -->
 </section>
+
+<div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">@Model.ErrorModel.Caption</div>
+            <div class="modal-footer">
+                <p class="lead">@Model.ErrorModel.Message</p>
+                <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
