--- a/ProjectDriver_Client/Pages/Response/Unauthorized.cshtml
+++ b/ProjectDriver_Client/Pages/Response/Unauthorized.cshtml
@@ -1,4 +1,4 @@
 ﻿@page
-@model ProjectDriver_Client.Pages.Response.UnauthorizedModel
+@model DriveYOU_WebClient.Pages.Response.UnauthorizedModel
 @{
 }
