--- a/ProjectDriver_Client/Pages/Index.cshtml
+++ b/ProjectDriver_Client/Pages/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model DriveYOU_WebClient.Pages.IndexModel
 @{
     ViewData["Title"] = "Home";
 }
@@ -34,12 +34,12 @@
     <h3 class="h3 font-weight-bold text-center text-dark">Планируете поездку на машине ?</h3>
     <div class="row justify-content-center text-center mt-5 ">
         <div class="col-sm-6">
-            <div style="background-image:url(/car.png);" class="homepage-images"></div>
+            <div style="background-image:url(/images/car.png);" class="homepage-images"></div>
             <h5 class="h5 font-weight-bold text-black">Экономьте на бензине</h5>
             <p class="lead text-muted" style="font-size:small">Предложите поездку — пассажиры оплатят до 100% ваших дорожных расходов</p>
         </div>
         <div class="col-sm-6">
-            <div style="background-image:url(/driver.png);" class="homepage-images"></div>
+            <div style="background-image:url(/images/driver.png);" class="homepage-images"></div>
             <h5 class="h5 font-weight-bold text-black">Попутчики не дадут скуча­ть в пути</h5>
             <p class="lead text-muted" style="font-size:small">Совместные поездки — это отличный способ скоротать время в дороге в приятной компании</p>
         </div>
@@ -53,7 +53,7 @@
     <h5 class="h5 font-weight-bold text-center">Мы создали BeepCar, чтобы помочь людям экономить в дороге</h5>
     <div class="row mt-5">
         <div class="col-sm">
-            <div style="background-image:url(/train.png);" class="homepage-bottom-images"></div>
+            <div style="background-image:url(/images/train.png);" class="homepage-bottom-images"></div>
         </div>
         <div class="col-sm m-4">
             <h5 class="h5 font-weight-bold">дешевле поезда</h5>
@@ -68,7 +68,7 @@
             </p>
         </div>
         <div class="col-sm">
-            <div style="background-image:url(/bus.png);" class="homepage-bottom-images"></div>
+            <div style="background-image:url(/images/bus.png);" class="homepage-bottom-images"></div>
         </div>
     </div>
 </div>
