--- a/ProjectDriver_Client/Pages/MyAccount.cshtml
+++ b/ProjectDriver_Client/Pages/MyAccount.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{handler?}"
-@model ProjectDriver_Client.Pages.MyAccountModel
+@model DriveYOU_WebClient.Pages.MyAccountModel
 
 <div class="container position-relative" style="padding-top:30px;">
     <div class="card">
@@ -98,6 +98,20 @@
             <h2 class="h2 text-center font-weight-bold m-5 p-5">No data to show</h2>
         }
     </div>
+</div>
 
-
+<div class="modal fade" id="ModalWindow" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Error</h5>
+                <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">@Model.ErrorModel.Caption</div>
+            <div class="modal-footer">
+                <p class="lead">@Model.ErrorModel.Message</p>
+                <button type="button" class="btn btn-primary" data-mdb-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
