--- a/ProjectDriver_Client/Pages/_ViewImports.cshtml
+++ b/ProjectDriver_Client/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ProjectDriver_Client
-@namespace ProjectDriver_Client.Pages
+﻿@using DriveYOU_WebClient
+@namespace DriveYOU_WebClient.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
