--- a/ProjectDriver_Client/wwwroot/css/site.css
+++ b/ProjectDriver_Client/wwwroot/css/site.css
@@ -89,12 +89,12 @@ body {
     padding: 7px 7px 7px 7px;
 }
 
-.home-title{
+.home-title {
     display: block;
     width: 100%;
     text-align: center;
     position: relative;
-    background-image: url("/homeimage.jpg");
+    background-image: url("/images/homeimage.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 25%;
